@@ -1,3 +1,12 @@
+2013-01-17  Jack Howarth <howarth@bromo.med.uc.edu>
+
+	PR sanitizer/55679
+	* g++.dg/asan/interception-test-1.C: Skip on darwin.
+	* lib/target-supports.exp (check_effective_target_swapcontext): Use
+	check_no_compiler_messages to test support in ucontext.h.
+	(check_effective_target_setrlimit): Return 0 for Darwin's non-posix
+	compliant RLIMIT_AS.
+
 2013-01-10  Kostya Serebryany  <kcc@google.com>
 
 	* g++.dg/asan/asan_test.cc: Sync from upstream.
